; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/kernel/extr_t_sysv.c_print_msqid_ds.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/kernel/extr_t_sysv.c_print_msqid_ds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msqid_ds = type { %struct.TYPE_2__, i32, i32, i32, i32, i32, i64, i32 }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [50 x i8] c"PERM: uid %d, gid %d, cuid %d, cgid %d, mode 0%o\0A\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"qnum %lu, qbytes %lu, lspid %d, lrpid %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"stime: %s\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"rtime: %s\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"ctime: %s\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"uid mismatch\00", align 1
@.str.6 = private unnamed_addr constant [13 x i8] c"gid mismatch\00", align 1
@.str.7 = private unnamed_addr constant [14 x i8] c"mode mismatch\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_msqid_ds(%struct.msqid_ds* %0, i32 %1) #0 {
  %3 = alloca %struct.msqid_ds*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.msqid_ds* %0, %struct.msqid_ds** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i64 (...) @geteuid()
  store i64 %7, i64* %5, align 8
  %8 = call i64 (...) @getegid()
  store i64 %8, i64* %6, align 8
  %9 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %10 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %14 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %18 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %22 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 3
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %26 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 4
  %28 = load i32, i32* %27, align 8
  %29 = and i32 %28, 511
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %16, i32 %20, i32 %24, i32 %29)
  %31 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %32 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %31, i32 0, i32 7
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %35 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %34, i32 0, i32 6
  %36 = load i64, i64* %35, align 8
  %37 = trunc i64 %36 to i32
  %38 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %39 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %38, i32 0, i32 5
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %42 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %41, i32 0, i32 4
  %43 = load i32, i32* %42, align 8
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0), i32 %33, i32 %37, i32 %40, i32 %43)
  %45 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %46 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %45, i32 0, i32 3
  %47 = call i8* @ctime(i32* %46)
  %48 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %47)
  %49 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %50 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %49, i32 0, i32 2
  %51 = call i8* @ctime(i32* %50)
  %52 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* %51)
  %53 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %54 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %53, i32 0, i32 1
  %55 = call i8* @ctime(i32* %54)
  %56 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* %55)
  %57 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %58 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 8
  %61 = sext i32 %60 to i64
  %62 = load i64, i64* %5, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %72

64:                                               ; preds = %2
  %65 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %66 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %65, i32 0, i32 0
  %67 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %66, i32 0, i32 2
  %68 = load i32, i32* %67, align 8
  %69 = sext i32 %68 to i64
  %70 = load i64, i64* %5, align 8
  %71 = icmp eq i64 %69, %70
  br label %72

72:                                               ; preds = %64, %2
  %73 = phi i1 [ false, %2 ], [ %71, %64 ]
  %74 = zext i1 %73 to i32
  %75 = call i32 @ATF_REQUIRE_MSG(i32 %74, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0))
  %76 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %77 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %76, i32 0, i32 0
  %78 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 4
  %80 = sext i32 %79 to i64
  %81 = load i64, i64* %6, align 8
  %82 = icmp eq i64 %80, %81
  br i1 %82, label %83, label %91

83:                                               ; preds = %72
  %84 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %85 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %84, i32 0, i32 0
  %86 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %85, i32 0, i32 3
  %87 = load i32, i32* %86, align 4
  %88 = sext i32 %87 to i64
  %89 = load i64, i64* %6, align 8
  %90 = icmp eq i64 %88, %89
  br label %91

91:                                               ; preds = %83, %72
  %92 = phi i1 [ false, %72 ], [ %90, %83 ]
  %93 = zext i1 %92 to i32
  %94 = call i32 @ATF_REQUIRE_MSG(i32 %93, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.6, i64 0, i64 0))
  %95 = load %struct.msqid_ds*, %struct.msqid_ds** %3, align 8
  %96 = getelementptr inbounds %struct.msqid_ds, %struct.msqid_ds* %95, i32 0, i32 0
  %97 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %96, i32 0, i32 4
  %98 = load i32, i32* %97, align 8
  %99 = and i32 %98, 511
  %100 = load i32, i32* %4, align 4
  %101 = icmp eq i32 %99, %100
  %102 = zext i1 %101 to i32
  %103 = call i32 @ATF_REQUIRE_MSG(i32 %102, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.7, i64 0, i64 0))
  ret void
}

declare dso_local i64 @geteuid(...) #1

declare dso_local i64 @getegid(...) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @ctime(i32*) #1

declare dso_local i32 @ATF_REQUIRE_MSG(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
